--- a/paginas/questao_03.html
+++ b/paginas/questao_03.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Questão 03</title>
-  <script src="js/Questao_03.js" defer></script>
+  <script src="../script/questao_03.js" defer></script>
 </head>
 <body>
   <h1>Questão 03</h1>
